--- a/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/token/show.html.eex
+++ b/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/token/show.html.eex
@@ -13,6 +13,11 @@
   </li>
 
   <li>
+    <strong>Write rights:</strong>
+    <%= @token.is_writable %>
+  </li>
+
+  <li>
     <strong>Owner:</strong>
     <%= @user %>
   </li>
