--- a/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/edit/form_api.html.eex
+++ b/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/edit/form_api.html.eex
@@ -11,6 +11,10 @@
 <%= text_input f, :key %>
 <%= error_tag f, :key %>
 
+<%= label f, :is_writable, "Does this key have write permissions?" %>
+<%= checkbox f, :is_writable %>
+<%= error_tag f, :is_writable %>
+
 <div>
     <%= submit "Create token" %>
   </div>
