--- a/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/layout/app.html.eex
+++ b/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/layout/app.html.eex
@@ -33,9 +33,7 @@
           <li><%= new_locale @conn, :nl, "Nederlands" %></li>
         </ul>
       </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <h3>Mikkel Skovdal's IP major project</h3>
       </section>
     </header>
     <main role="main" class="container">
