--- a/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/user/index2.html.eex
+++ b/apps/mikkel_dieren_web/lib/mikkel_dieren_web/templates/user/index2.html.eex
@@ -1,4 +1,4 @@
-<h1><%= gettext "Listing Users" %></h1>
+<h1><%= gettext "Listing Tokens" %></h1>
 
 <table>
   <thead>
@@ -8,6 +8,7 @@
       <th><%= gettext "First name" %></th>
       <th><%= gettext "Last name" %></th>
       <th><%= gettext "Token" %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -20,11 +21,10 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= key.token %></td>
+        <td><span><%= link "Delete", to: Routes.token_path(@conn, :admin_delete, key), method: :delete, data: [confirm: "Are you sure?"] %></span></td>
         </tr>
         <% end %>
     <% end %>
 <% end %>
   </tbody>
 </table>
-
-<span><%= link "New User", to: Routes.user_path(@conn, :new) %></span>
